idea/testData/multiplatform/duplicateActualsOneWithStrongIncompatibility/middle/middle.kt
package foo

actual fun <!LINE_MARKER("descr='Has declaration in common module'")!>foo<!>(): Int = 42